# contract/src/main/java/io/pravega/schemaregistry/contract/generated/rest/server/api/GroupsApiService.java
@@ -43,16 +43,16 @@ public abstract class GroupsApiService {
     public abstract Response deleteGroup(String groupName,SecurityContext securityContext) throws NotFoundException;
     public abstract Response getCodecsList(String groupName,SecurityContext securityContext) throws NotFoundException;
     public abstract Response getEncodingId(String groupName,GetEncodingIdRequest getEncodingIdRequest,SecurityContext securityContext) throws NotFoundException;
-    public abstract Response getGroupEncodingInfo(String groupName,Integer encodingId,SecurityContext securityContext) throws NotFoundException;
+    public abstract Response getEncodingInfo(String groupName,Integer encodingId,SecurityContext securityContext) throws NotFoundException;
     public abstract Response getGroupHistory(String groupName,SecurityContext securityContext) throws NotFoundException;
     public abstract Response getGroupProperties(String groupName,SecurityContext securityContext) throws NotFoundException;
-    public abstract Response getGroupSchemas(String groupName,SecurityContext securityContext) throws NotFoundException;
-    public abstract Response getLatestGroupSchema(String groupName,SecurityContext securityContext) throws NotFoundException;
-    public abstract Response getGroupLatestSchemaVersionForSchemaName(String groupName,String schemaName,SecurityContext securityContext) throws NotFoundException;
+    public abstract Response getLatestSchema(String groupName,SecurityContext securityContext) throws NotFoundException;
+    public abstract Response getLatestSchemaForSchemaName(String groupName,String schemaName,SecurityContext securityContext) throws NotFoundException;
     public abstract Response getSchemaFromVersion(String groupName,Integer version,SecurityContext securityContext) throws NotFoundException;
     public abstract Response getSchemaNames(String groupName,SecurityContext securityContext) throws NotFoundException;
     public abstract Response getSchemaValidationRules(String groupName,SecurityContext securityContext) throws NotFoundException;
     public abstract Response getSchemaVersion(String groupName,GetSchemaVersion getSchemaVersion,SecurityContext securityContext) throws NotFoundException;
+    public abstract Response getSchemas(String groupName,SecurityContext securityContext) throws NotFoundException;
     public abstract Response getSchemasForSchemaName(String groupName,String schemaName,SecurityContext securityContext) throws NotFoundException;
     public abstract Response listGroups( String continuationToken, Integer limit,SecurityContext securityContext) throws NotFoundException;
     public abstract Response updateSchemaValidationRules(String groupName,UpdateValidationRulesPolicyRequest updateValidationRulesPolicyRequest,SecurityContext securityContext) throws NotFoundException;
